Lilypads now wave and respond to player movement

--- a/shaders/block.properties
+++ b/shaders/block.properties
@@ -58,5 +58,8 @@ block.18 = torchflower fire:east=false:north=false:south=false:west=false soul_f
 # wavy cutouts that aren't up-facing diagonals
 block.19 = pink_petals bamboo:age=0:stage=1
 
+# stuff that waves on top of water (lilypads)
+block.20 = lily_pad
+
 # overrides for certain blocks (Iris doesn't support multiple comma-separated blockstate values, so we make do with this)
 block.0 = redstone_wire:power=0 respawn_anchor:charges=0
