Added definite horizon to sky

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -107,9 +107,11 @@ variable.float.elevation=pow(max(0.0, 1.0 - sunTheta / (pi / 2.0)), 1.0/3.0)
 variable.float.skyAlbedo_X=0.4124564 * skyColor.r + 0.3575761 * skyColor.g + 0.1804375 * skyColor.b
 variable.float.skyAlbedo_Y=0.2126729 * skyColor.r + 0.7151522 * skyColor.g + 0.0721750 * skyColor.b
 variable.float.skyAlbedo_Z=0.0193339 * skyColor.r + 0.1191920 * skyColor.g + 0.9503041 * skyColor.b
+
+uniform.vec3.skyAlbedo=vec3(skyAlbedo_X, skyAlbedo_Y, skyAlbedo_Z)
 # 0-9 scale instead of 1-10
 # rain raises turbidity by 3, fog by 6
-variable.float.turbidity=maxRainFogSmooth * 3 + fogWeather * 6
+variable.float.turbidity=maxRainFogSmooth * 3 + fogWeather * 5 + 1.0
 
 screen = <profile> TEX_RES STREAMER_MODE LIGHTNING_FLASHES <empty> <empty> [SHADOWS] [LIGHTING] [COLORS] [POST_PROCESSING] [MISC] [WEATHER] <empty> <empty> [ADVANCED]
 
