General code cleanup

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -89,7 +89,7 @@ uniform.float.directLightMult=3.4 / sqrt(maxRainFogSmooth + 1) - 2.4
 
 uniform.float.eyeBrightnessSmoothFloat=smooth(inSky, 40, 40)
 
-variable.float.normalizedSkyTime=(worldTime - 785) / 24000
+variable.float.normalizedSkyTime=(worldTime + 785) / 24000
 variable.float.unclampedSkyTime=sin(2 * pi * normalizedSkyTime)
 uniform.float.skyTime=clamp(unclampedSkyTime + 0.5, 0, 1)
 
