Much more accurate skyTime uniform

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -89,8 +89,10 @@ uniform.float.directLightMult=3.4 / sqrt(maxRainFogSmooth + 1) - 2.4
 
 uniform.float.eyeBrightnessSmoothFloat=smooth(inSky, 40, 40)
 
-variable.float.normalizedSkyTime=(worldTime + 785) / 24000
-variable.float.unclampedSkyTime=sin(2 * pi * normalizedSkyTime)
+# dot product of up vector and sun position
+variable.float.sunPosLen=sqrt(sunPosition.x * sunPosition.x + sunPosition.y * sunPosition.y + sunPosition.z * sunPosition.z)
+variable.float.upPosLen=sqrt(upPosition.x * upPosition.x + upPosition.y * upPosition.y + upPosition.z * upPosition.z)
+variable.float.unclampedSkyTime=(sunPosition.x * upPosition.x + sunPosition.y * upPosition.y + sunPosition.z * upPosition.z) / (sunPosLen * upPosLen)
 uniform.float.skyTime=clamp(unclampedSkyTime + 0.5, 0, 1)
 
 variable.float.cameraDivOffset=1000
