Added scene temperature to post-process menu

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -119,7 +119,7 @@ variable.float.turbidity=maxRainFogSmooth * 3 + fogWeather * 5 + 0.4
 
 screen = <profile> TEX_RES STREAMER_MODE LIGHTNING_FLASHES <empty> <empty> [SHADOWS] [LIGHTING] [COLORS] [POST_PROCESSING] [MISC] [WEATHER] <empty> <empty> [ADVANCED]
 
-screen.POST_PROCESSING =  [TONEMAPPING] [AA_BUFFET] <empty> <empty> LUMINANCE_CONTRAST EXPOSURE POST_SATURATION <empty> <empty> <empty> DITHERING_MODE INVISIBILITY_DISTORTION
+screen.POST_PROCESSING =  [TONEMAPPING] [AA_BUFFET] <empty> <empty> LUMINANCE_CONTRAST EXPOSURE POST_SATURATION POST_TEMP <empty> <empty> DITHERING_MODE INVISIBILITY_DISTORTION
     screen.AA_BUFFET = TAA_MODE TEXTURE_FILTERING
 screen.SHADOWS = SHADOWS_ENABLED_USER <empty> <empty> <empty> shadowDistance entityShadowDistanceMul shadowMapResolution SHADOW_DISTORTION <empty> <empty> SHADOW_FILTERING SHADOW_FILTERING_RADIUS SHADOW_FILTERING_SAMPLES
 screen.LIGHTING = [LIGHT_STRENGTH] [SSAO_BETA] [RIMLIGHT] [FOG] <empty> <empty> VANILLA_LIGHTING CUTOUT_ALIGN_STRENGTH <empty> <empty> SUN_TEMP TORCH_TEMP
