Added proper entity velocity support

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -29,6 +29,10 @@ particles.ordering=after
 
 separateEntityDraws=false
 
+
+iris.feature.optional
+
+
 alphaTest.gbuffers_skytextured=LEQUAL 0.001
 
 # texture.noise=/tex/noise/constituents/stippling.png
