Use `AT_VELOCITY` feature flag

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -30,7 +30,7 @@ particles.ordering=after
 separateEntityDraws=false
 
 
-iris.feature.optional
+iris.features.optional=AT_VELOCITY
 
 
 alphaTest.gbuffers_skytextured=LEQUAL 0.001
