Added more twilight forest blocks and prepare for better sky

--- a/shaders/block.properties
+++ b/shaders/block.properties
@@ -8,7 +8,7 @@ block.2 = weeping_vines_plant weeping_vines hanging_roots cave_vines:berries=fal
 
 # light-emitting blocks referenced from https://minecraft.fandom.com/wiki/Light
 # last entries separated by two spaces don't usually emit light
-block.3 = beacon conduit:waterlogged=true end_gateway end_portal glowstone pearlescent_froglight verdant_froglight ochre_froglight lantern redstone_lamp:lit=true respawn_anchor sea_lantern sea_pickle:waterlogged=true shroomlight end_rod candle:lit=true nether_portal crying_obsidian soul_lantern ender_chest glow_lichen amethyst_cluster large_amethyst_bud medium_amethyst_bud small_amethyst_bud brewing_stand dragon_egg end_portal_frame:eye=true twilightforest:firefly twilightforest:moonworm  sculk sculk_vein
+block.3 = beacon conduit:waterlogged=true end_gateway end_portal glowstone pearlescent_froglight verdant_froglight ochre_froglight lantern redstone_lamp:lit=true respawn_anchor sea_lantern sea_pickle:waterlogged=true shroomlight end_rod candle:lit=true nether_portal crying_obsidian soul_lantern ender_chest glow_lichen amethyst_cluster large_amethyst_bud medium_amethyst_bud small_amethyst_bud brewing_stand dragon_egg end_portal_frame:eye=true twilightforest:firefly twilightforest:moonworm twilightforest:reappearing_block twilightforest:vanishing_block:active=true twilightforest:locked_vanishing_block:active=true twilightforest:antibuilder twilightforest:carminite_builder:state=builder_active twilightforest:carminite_reactor:active=true  sculk sculk_vein
 
 # up-facing glowing
 block.4 = brown_mushroom amethyst_cluster:facing=up large_amethyst_bud:facing=up medium_amethyst_bud:facing=up small_amethyst_bud:facing=up redstone_wire
