Added mushgloom to blocks

--- a/shaders/block.properties
+++ b/shaders/block.properties
@@ -19,8 +19,8 @@ block.5 = amethyst_cluster:facing=down large_amethyst_bud:facing=down medium_ame
 # partially light-emitting blocks
 block.6 = lava_cauldron campfire:lit=true jack_o_lantern torch wall_torch blast_furnace:lit=true furnace:lit=true smoker:lit=true soul_campfire:lit=true soul_torch soul_wall_torch deepslate_redstone_ore:lit=true redstone_ore:lit=true enchanting_table redstone_torch redstone_wall_torch
 
-# exception: partially-lit up-facing cutouts (NONE ASSIGNED)
-# block.7 = 
+# exception: partially-lit up-facing cutouts
+block.7 = twilightforest:mushgloom
 
 # exception: partially-lit down-facing cutouts
 block.8 = cave_vines:berries=true cave_vines_plant:berries=true twilightforest:torchberry_plant:has_torchberries=true
