--- a/shaders/block.properties
+++ b/shaders/block.properties
@@ -11,7 +11,7 @@ block.2 = weeping_vines_plant weeping_vines hanging_roots cave_vines:berries=fal
 block.3 = beacon conduit:waterlogged=true end_gateway end_portal glowstone pearlescent_froglight verdant_froglight ochre_froglight lantern redstone_lamp:lit=true respawn_anchor sea_lantern sea_pickle:waterlogged=true shroomlight end_rod candle:lit=true nether_portal crying_obsidian soul_lantern ender_chest glow_lichen amethyst_cluster large_amethyst_bud medium_amethyst_bud small_amethyst_bud brewing_stand dragon_egg end_portal_frame:eye=true twilightforest:firefly twilightforest:moonworm twilightforest:reappearing_block twilightforest:vanishing_block:active=true twilightforest:locked_vanishing_block:active=true twilightforest:antibuilder twilightforest:carminite_builder:state=builder_active twilightforest:carminite_reactor:active=true twilightforest:ghast_trap:active=true twilightforest:encased_fire_jet  sculk sculk_vein
 
 # up-facing glowing
-block.4 = brown_mushroom amethyst_cluster:facing=up large_amethyst_bud:facing=up medium_amethyst_bud:facing=up small_amethyst_bud:facing=up redstone_wire twilightforest:mushgloom
+block.4 = amethyst_cluster:facing=up large_amethyst_bud:facing=up medium_amethyst_bud:facing=up small_amethyst_bud:facing=up redstone_wire 
 
 # down-facing glowing
 block.5 = amethyst_cluster:facing=down large_amethyst_bud:facing=down medium_amethyst_bud:facing=down small_amethyst_bud:facing=down
@@ -19,8 +19,8 @@ block.5 = amethyst_cluster:facing=down large_amethyst_bud:facing=down medium_ame
 # partially light-emitting blocks
 block.6 = lava_cauldron campfire:lit=true jack_o_lantern torch wall_torch blast_furnace:lit=true furnace:lit=true smoker:lit=true soul_campfire:lit=true soul_torch soul_wall_torch deepslate_redstone_ore:lit=true redstone_ore:lit=true enchanting_table redstone_torch redstone_wall_torch
 
-# exception: partially-lit up-facing cutouts (NONE ASSIGNED)
-# block.7 = 
+exception: partially-lit up-facing cutouts (NONE ASSIGNED)
+block.7 = brown_mushroom twilightforest:mushgloom
 
 # exception: partially-lit down-facing cutouts
 block.8 = cave_vines:berries=true cave_vines_plant:berries=true twilightforest:torchberry_plant:has_torchberries=true
