Ice now has its own atmospheric fog

--- a/shaders/block.properties
+++ b/shaders/block.properties
@@ -46,7 +46,7 @@ block.14 = twilightforest:giant_leaves cherry_leaves
 # stiff wavy stuff (that is not a cutout)
 block.15 = oak_leaves spruce_leaves birch_leaves jungle_leaves acacia_leaves dark_oak_leaves mangrove_leaves azalea_leaves flowering_azalea_leaves twilightforest:beanstalk_leaves twilightforest:thorn_leaves twilightforest:twilight_oak_leaves twilightforest:canopy_leaves twilightforest:mangrove_leaves twilightforest:time_leaves twilightforest:transformation_leaves twilightforest:mining_leaves twilightforest:sorting_leaves twilightforest:rainbow_oak_leaves
 
-# water / water fog afffected
+# water
 block.16 = water flowing_water
 
 #lava
@@ -60,6 +60,9 @@ block.19 = pink_petals bamboo:age=0:stage=1
 
 # stuff that waves on top of water (lilypads)
 block.20 = lily_pad
+
+# ice (adds water fog)
+block.21 = ice
 
 # overrides for certain blocks (Iris doesn't support multiple comma-separated blockstate values, so we make do with this)
 block.0 = redstone_wire:power=0 respawn_anchor:charges=0
