Very broken preetham sky

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -227,3 +227,33 @@ uniform.vec3.skyG=vec3(X_G, Y_G, Z_G)
 uniform.vec3.skyI=vec3(X_I, Y_I, Z_I)
 uniform.vec3.skyH=vec3(X_H, Y_H, Z_H)
 uniform.vec3.skyZ=vec3(X_Z, Y_Z, Z_Z)
+
+
+variable.float.sunThetaSquared=sunTheta * sunTheta
+variable.float.sunThetaCubed=sunThetaSquared * sunTheta
+variable.float.turbiditySquared=(turbidity + 1.0) * (turbidity + 1.0)
+variable.float.p_x_A=(-0.0193) * ((turbidity + 1.0)) + (-0.2592)
+variable.float.p_y_A=(-0.0167) * ((turbidity + 1.0)) + (-0.2608)
+variable.float.p_Y_A=(0.1787) * ((turbidity + 1.0)) + (-1.463)
+variable.float.p_x_B=(-0.0665) * ((turbidity + 1.0)) + (0.0008)
+variable.float.p_y_B=(-0.095) * ((turbidity + 1.0)) + (0.0092)
+variable.float.p_Y_B=(-0.3554) * ((turbidity + 1.0)) + (0.4275)
+variable.float.p_x_C=(-0.0004) * ((turbidity + 1.0)) + (0.2125)
+variable.float.p_y_C=(-0.0079) * ((turbidity + 1.0)) + (0.2102)
+variable.float.p_Y_C=(-0.0227) * ((turbidity + 1.0)) + (5.3251)
+variable.float.p_x_D=(-0.0641) * ((turbidity + 1.0)) + (-0.8989)
+variable.float.p_y_D=(-0.0441) * ((turbidity + 1.0)) + (-1.6537)
+variable.float.p_Y_D=(0.1206) * ((turbidity + 1.0)) + (-2.5771)
+variable.float.p_x_E=(-0.0033) * ((turbidity + 1.0)) + (0.0452)
+variable.float.p_y_E=(-0.0109) * ((turbidity + 1.0)) + (0.0529)
+variable.float.p_Y_E=(-0.067) * ((turbidity + 1.0)) + (0.3703)
+variable.float.p_x_Z=(((turbiditySquared) * (((sunThetaCubed) * (0.00166) + (sunThetaSquared) * (-0.00375) + (sunTheta) * (0.00209) + (1.0) * (0.0))) + ((turbidity + 1.0)) * (((sunThetaCubed) * (-0.02903) + (sunThetaSquared) * (0.06377) + (sunTheta) * (-0.03202) + (1.0) * (0.00394))) + (1.0) * (((sunThetaCubed) * (0.11693) + (sunThetaSquared) * (-0.21196) + (sunTheta) * (0.06052) + (1.0) * (0.25886))))) / (((1.0 + (p_x_A) * exp(p_x_B)) * (1.0 + (p_x_C) * exp((p_x_D) * (sunTheta)) + (p_x_E) * cos(sunTheta) * cos(sunTheta))))
+variable.float.p_y_Z=(((turbiditySquared) * (((sunThetaCubed) * (0.00275) + (sunThetaSquared) * (-0.0061) + (sunTheta) * (0.00317) + (1.0) * (0.0))) + ((turbidity + 1.0)) * (((sunThetaCubed) * (-0.04214) + (sunThetaSquared) * (0.0897) + (sunTheta) * (-0.04153) + (1.0) * (0.00516))) + (1.0) * (((sunThetaCubed) * (0.15346) + (sunThetaSquared) * (-0.26756) + (sunTheta) * (0.0667) + (1.0) * (0.26688))))) / (((1.0 + (p_y_A) * exp(p_y_B)) * (1.0 + (p_y_C) * exp((p_y_D) * (sunTheta)) + (p_y_E) * cos(sunTheta) * cos(sunTheta))))
+variable.float.p_Z_Y=(((4.0453 * (turbidity + 1.0) - 4.971) * tan(((4.0 / 9.0 - (turbidity + 1.0) / 120.0) * (pi - 2.0 * sunTheta))) - 0.2155 * (turbidity + 1.0) + 2.4192)) * 1000.0 / (((1.0 + (p_Z_A) * exp(p_Z_B)) * (1.0 + (p_Z_C) * exp((p_Z_D) * (sunTheta)) + (p_Z_E) * cos(sunTheta) * cos(sunTheta))))
+uniform.vec3.p_A=vec3(p_x_A, p_y_A, p_Y_A)
+uniform.vec3.p_B=vec3(p_x_B, p_y_B, p_Y_B)
+uniform.vec3.p_C=vec3(p_x_C, p_y_C, p_Y_C)
+uniform.vec3.p_D=vec3(p_x_D, p_y_D, p_Y_D)
+uniform.vec3.p_E=vec3(p_x_E, p_y_E, p_Y_E)
+uniform.vec3.p_Z=vec3(p_x_Z, p_y_Z, p_Y_Z)
+variable.float.p_Y_Z=(((4.0453 * (turbidity + 1.0) - 4.971) * tan(((4.0 / 9.0 - (turbidity + 1.0) / 120.0) * (pi - 2.0 * sunTheta))) - 0.2155 * (turbidity + 1.0) + 2.4192)) * 1000.0 / (((1.0 + (p_Y_A) * exp(p_Y_B)) * (1.0 + (p_Y_C) * exp((p_Y_D) * (sunTheta)) + (p_Y_E) * cos(sunTheta) * cos(sunTheta))))
