--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -129,7 +129,7 @@ screen.LIGHTING = [LIGHT_STRENGTH] [SSAO_BETA] [RIMLIGHT] [FOG] <empty> <empty> 
     screen.SSAO = AO_MODE AO_INTENSITY AO_RADIUS <empty> <empty> <empty> AO_SAMPLES TEMPORAL_UPDATE_SPEED_AO
     screen.LIGHT_STRENGTH = DYNAMIC_EXPOSURE_LIGHTING <empty> SUN_LIGHT_MULT_USER SKY_LIGHT_MULT_USER SKY_LIGHT_MULT_OVERCAST_USER NIGHT_SKY_LIGHT_MULT_USER MOON_LIGHT_MULT_USER BLOCK_LIGHT_MULT_USER 
 screen.COLORS = [TONEMAPPING] [LIGHT_STRENGTH] BOSS_BATTLE_COLORS VANILLA_LIGHTING <empty> <empty> SUN_TEMP TORCH_TEMP POST_TEMP STAR_WEIGHTS SKY_COLOR_BLEND SKY_BRIGHTNESS_USER
-    screen.TONEMAPPING = USE_LUT USER_LMT_MODE USER_OUTPUT_COLORSPACE USER_GAMMA_CORRECT
+    screen.TONEMAPPING = USE_LUT USER_LMT_MODE USER_OUTPUT_COLORSPACE
     screen.TONEMAPPING.columns = 1
         screen.NIGHT_EFFECT = USE_NIGHT_EFFECT NIGHT_EFFECT_POINT NIGHT_EFFECT_SATURATION
         screen.NIGHT_EFFECT.columns = 1
@@ -163,9 +163,9 @@ sliders = CONTRAST LUMINANCE_CONTRAST EXPOSURE POST_SATURATION EXPOSURE_SAMPLES 
 
 # profile.CONTENT_ONE = VANILLA_LIGHTING:0 EXPOSURE:1.2
 
-profile.ONE = STREAMER_MODE:1 VANILLA_LIGHTING:1 CUTOUT_ALIGN_STRENGTH:1.0 SKY_COLOR_BLEND:0.3 STAR_WEIGHTS:1.00 SKY_SATURATION:1.13 SKY_BRIGHTNESS_USER:1.4 !USE_LUT USER_OUTPUT_COLORSPACE:0 USER_LMT_MODE:3 USER_GAMMA_CORRECT !USE_NIGHT_EFFECT AO_MODE:1 AO_INTENSITY:2.0 ATMOSPHERIC_FOG_USER ATMOSPHERIC_FOG_DENSITY:0.001 !SHADOWS_ENABLED_USER EXPOSURE:1.0 CONTRAST:0.0 POST_SATURATION:1.0 DITHERING_MODE:1 LIGHTNING_FLASHES:1.0 INVISIBILITY_DISTORTION WAVING_ENABLED WIND_STRENGTH_CONSTANT_USER:0.3 RAIN_AMOUNT_USER:0.6 RAIN_THICKNESS:1.4 !BRIGHT_NETHER
-profile.TWO = profile.ONE VANILLA_LIGHTING:2 CUTOUT_ALIGN_STRENGTH:0.8 SKY_COLOR_BLEND:0.6 STAR_WEIGHTS:1.5 SKY_SATURATION:1.0 SKY_BRIGHTNESS_USER:1.0 !USE_LUT USER_OUTPUT_COLORSPACE:0 USER_LMT_MODE:4 USER_GAMMA_CORRECT !USE_NIGHT_EFFECT AO_MODE:1 AO_INTENSITY:1.8 ATMOSPHERIC_FOG_USER ATMOSPHERIC_FOG_DENSITY:0.0015 SHADOWS_ENABLED_USER LIGHTNING_FLASHES:0.8 WIND_STRENGTH_CONSTANT_USER:0.5 PIXELATED_SHADOWS_USER:0 shadowMapResolution:4096 shadowDistance:150.0 SHADOW_FILTERING:5
-profile.THREE = profile.TWO VANILLA_LIGHTING:2 CUTOUT_ALIGN_STRENGTH:0.8 SKY_COLOR_BLEND:0.7 STAR_WEIGHTS:1.75 SKY_SATURATION:1.0 SKY_BRIGHTNESS_USER:1.0 USE_LUT USER_OUTPUT_COLORSPACE:0 USER_LMT_MODE:4 USER_GAMMA_CORRECT USE_NIGHT_EFFECT AO_MODE:1 AO_INTENSITY:1.8 AO_RADIUS:1.2 TEMPORAL_UPDATE_SPEED_AO:0.0026 AO_SAMPLES:9 ATMOSPHERIC_FOG_USER ATMOSPHERIC_FOG_DENSITY:0.0015 SHADOWS_ENABLED_USER LIGHTNING_FLASHES:0.8 WIND_STRENGTH_CONSTANT_USER:0.6 PIXELATED_SHADOWS_USER:0 shadowMapResolution:4096 shadowDistance:200.0 SHADOW_FILTERING:1
+profile.ONE = STREAMER_MODE:1 VANILLA_LIGHTING:1 CUTOUT_ALIGN_STRENGTH:1.0 SKY_COLOR_BLEND:0.3 STAR_WEIGHTS:1.00 SKY_SATURATION:1.13 SKY_BRIGHTNESS_USER:1.4 !USE_LUT USER_OUTPUT_COLORSPACE:0 USER_LMT_MODE:3 !USE_NIGHT_EFFECT AO_MODE:1 AO_INTENSITY:2.0 ATMOSPHERIC_FOG_USER ATMOSPHERIC_FOG_DENSITY:0.001 !SHADOWS_ENABLED_USER EXPOSURE:1.0 CONTRAST:0.0 POST_SATURATION:1.0 DITHERING_MODE:1 LIGHTNING_FLASHES:1.0 INVISIBILITY_DISTORTION WAVING_ENABLED WIND_STRENGTH_CONSTANT_USER:0.3 RAIN_AMOUNT_USER:0.6 RAIN_THICKNESS:1.4 !BRIGHT_NETHER
+profile.TWO = profile.ONE VANILLA_LIGHTING:2 CUTOUT_ALIGN_STRENGTH:0.8 SKY_COLOR_BLEND:0.6 STAR_WEIGHTS:1.5 SKY_SATURATION:1.0 SKY_BRIGHTNESS_USER:1.0 !USE_LUT USER_OUTPUT_COLORSPACE:0 USER_LMT_MODE:4 !USE_NIGHT_EFFECT AO_MODE:1 AO_INTENSITY:1.8 ATMOSPHERIC_FOG_USER ATMOSPHERIC_FOG_DENSITY:0.0015 SHADOWS_ENABLED_USER LIGHTNING_FLASHES:0.8 WIND_STRENGTH_CONSTANT_USER:0.5 PIXELATED_SHADOWS_USER:0 shadowMapResolution:4096 shadowDistance:150.0 SHADOW_FILTERING:5
+profile.THREE = profile.TWO VANILLA_LIGHTING:2 CUTOUT_ALIGN_STRENGTH:0.8 SKY_COLOR_BLEND:0.7 STAR_WEIGHTS:1.75 SKY_SATURATION:1.0 SKY_BRIGHTNESS_USER:1.0 USE_LUT USER_OUTPUT_COLORSPACE:0 USER_LMT_MODE:4 USE_NIGHT_EFFECT AO_MODE:1 AO_INTENSITY:1.8 AO_RADIUS:1.2 TEMPORAL_UPDATE_SPEED_AO:0.0026 AO_SAMPLES:9 ATMOSPHERIC_FOG_USER ATMOSPHERIC_FOG_DENSITY:0.0015 SHADOWS_ENABLED_USER LIGHTNING_FLASHES:0.8 WIND_STRENGTH_CONSTANT_USER:0.6 PIXELATED_SHADOWS_USER:0 shadowMapResolution:4096 shadowDistance:200.0 SHADOW_FILTERING:1
 
 
 program.shadow.enabled=SHADOWS_ENABLED_USER
