--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -129,7 +129,7 @@ screen.LIGHTING = [LIGHT_STRENGTH] [SSAO_BETA] [RIMLIGHT] [FOG] <empty> <empty> 
     screen.SSAO = AO_MODE AO_INTENSITY AO_RADIUS <empty> <empty> <empty> AO_SAMPLES TEMPORAL_UPDATE_SPEED_AO
     screen.LIGHT_STRENGTH = DYNAMIC_EXPOSURE_LIGHTING <empty> SUN_LIGHT_MULT_USER SKY_LIGHT_MULT_USER SKY_LIGHT_MULT_OVERCAST_USER NIGHT_SKY_LIGHT_MULT_USER MOON_LIGHT_MULT_USER BLOCK_LIGHT_MULT_USER 
 screen.COLORS = [TONEMAPPING] [LIGHT_STRENGTH] BOSS_BATTLE_COLORS VANILLA_LIGHTING <empty> <empty> SUN_TEMP TORCH_TEMP POST_TEMP STAR_WEIGHTS SKY_COLOR_BLEND SKY_BRIGHTNESS_USER
-    screen.TONEMAPPING = USE_LUT USER_LMT_MODE USER_OUTPUT_COLORSPACE
+    screen.TONEMAPPING = USER_LMT_MODE USE_LUT USER_OUTPUT_COLORSPACE
     screen.TONEMAPPING.columns = 1
         screen.NIGHT_EFFECT = USE_NIGHT_EFFECT NIGHT_EFFECT_POINT NIGHT_EFFECT_SATURATION
         screen.NIGHT_EFFECT.columns = 1
