--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -133,7 +133,7 @@ screen.COLORS = [TONEMAPPING] [LIGHT_STRENGTH] BOSS_BATTLE_COLORS VANILLA_LIGHTI
     screen.TONEMAPPING.columns = 1
         screen.NIGHT_EFFECT = USE_NIGHT_EFFECT NIGHT_EFFECT_POINT NIGHT_EFFECT_SATURATION
         screen.NIGHT_EFFECT.columns = 1
-screen.MISC = [STREAMER_SETTINGS] [RIMLIGHT] [FADEOUT] <empty> <empty> <empty> WATER_STYLE LEAVE_WAVING_WAKE INVISIBILITY_DISTORTION BOSS_BATTLE_COLORS NOISY_LAVA SMOOTH_LAVA <empty> <empty> OUTLINE_THROUGH_BLOCKS OUTLINE_COLOR
+screen.MISC = [STREAMER_SETTINGS] [RIMLIGHT] [FADEOUT] [FOG] <empty> <empty> WATER_STYLE LEAVE_WAVING_WAKE INVISIBILITY_DISTORTION BOSS_BATTLE_COLORS NOISY_LAVA SMOOTH_LAVA <empty> <empty> OUTLINE_THROUGH_BLOCKS OUTLINE_COLOR
     screen.STREAMER_SETTINGS = STREAMER_MODE BRIGHT_NETHER LIGHTNING_FLASHES DITHERING_MODE <empty> <empty> RAIN_THICKNESS RAIN_TRANSPARENCY
     screen.STREAMER_SETTINGS.columns = 2
     screen.RIMLIGHT = RIMLIGHT_ENABLED RIMLIGHT_MULT <empty> <empty> RIMLIGHT_PIXEL_RADIUS RIMLIGHT_DIST RIMLIGHT_DYNAMIC_RADIUS RIMLIGHT_OUTLINE
@@ -164,8 +164,8 @@ sliders = CONTRAST LUMINANCE_CONTRAST EXPOSURE POST_SATURATION EXPOSURE_SAMPLES 
 # profile.CONTENT_ONE = VANILLA_LIGHTING:0 EXPOSURE:1.2
 
 profile.ONE = STREAMER_MODE:1 VANILLA_LIGHTING:1 CUTOUT_ALIGN_STRENGTH:1.0 SKY_COLOR_BLEND:0.3 STAR_WEIGHTS:1.00 SKY_SATURATION:1.13 SKY_BRIGHTNESS_USER:1.4 !USE_LUT USER_OUTPUT_COLORSPACE:0 USER_LMT_MODE:3 !USE_NIGHT_EFFECT AO_MODE:1 AO_INTENSITY:2.0 ATMOSPHERIC_FOG_USER ATMOSPHERIC_FOG_DENSITY:0.001 !SHADOWS_ENABLED_USER EXPOSURE:1.0 CONTRAST:0.0 POST_SATURATION:1.0 DITHERING_MODE:1 LIGHTNING_FLASHES:1.0 INVISIBILITY_DISTORTION WAVING_ENABLED WIND_STRENGTH_CONSTANT_USER:0.3 RAIN_AMOUNT_USER:0.6 RAIN_THICKNESS:1.4 !BRIGHT_NETHER
-profile.TWO = profile.ONE VANILLA_LIGHTING:2 CUTOUT_ALIGN_STRENGTH:0.8 SKY_COLOR_BLEND:0.6 STAR_WEIGHTS:1.5 SKY_SATURATION:1.0 SKY_BRIGHTNESS_USER:1.0 !USE_LUT USER_OUTPUT_COLORSPACE:0 USER_LMT_MODE:4 !USE_NIGHT_EFFECT AO_MODE:1 AO_INTENSITY:1.8 ATMOSPHERIC_FOG_USER ATMOSPHERIC_FOG_DENSITY:0.0015 SHADOWS_ENABLED_USER LIGHTNING_FLASHES:0.8 WIND_STRENGTH_CONSTANT_USER:0.5 PIXELATED_SHADOWS_USER:0 shadowMapResolution:4096 shadowDistance:150.0 SHADOW_FILTERING:5
-profile.THREE = profile.TWO VANILLA_LIGHTING:2 CUTOUT_ALIGN_STRENGTH:0.8 SKY_COLOR_BLEND:0.7 STAR_WEIGHTS:1.75 SKY_SATURATION:1.0 SKY_BRIGHTNESS_USER:1.0 USE_LUT USER_OUTPUT_COLORSPACE:0 USER_LMT_MODE:4 USE_NIGHT_EFFECT AO_MODE:1 AO_INTENSITY:1.8 AO_RADIUS:1.2 TEMPORAL_UPDATE_SPEED_AO:0.0026 AO_SAMPLES:9 ATMOSPHERIC_FOG_USER ATMOSPHERIC_FOG_DENSITY:0.0015 SHADOWS_ENABLED_USER LIGHTNING_FLASHES:0.8 WIND_STRENGTH_CONSTANT_USER:0.6 PIXELATED_SHADOWS_USER:0 shadowMapResolution:4096 shadowDistance:200.0 SHADOW_FILTERING:1
+profile.TWO = profile.ONE VANILLA_LIGHTING:2 CUTOUT_ALIGN_STRENGTH:0.8 SKY_COLOR_BLEND:0.6 STAR_WEIGHTS:1.5 SKY_SATURATION:1.0 SKY_BRIGHTNESS_USER:1.0 !USE_LUT USER_OUTPUT_COLORSPACE:0 USER_LMT_MODE:5 !USE_NIGHT_EFFECT AO_MODE:1 AO_INTENSITY:1.8 ATMOSPHERIC_FOG_USER ATMOSPHERIC_FOG_DENSITY:0.0015 SHADOWS_ENABLED_USER LIGHTNING_FLASHES:0.8 WIND_STRENGTH_CONSTANT_USER:0.5 PIXELATED_SHADOWS_USER:0 shadowMapResolution:4096 shadowDistance:150.0 SHADOW_FILTERING:5
+profile.THREE = profile.TWO VANILLA_LIGHTING:2 CUTOUT_ALIGN_STRENGTH:0.8 SKY_COLOR_BLEND:0.7 STAR_WEIGHTS:1.75 SKY_SATURATION:1.0 SKY_BRIGHTNESS_USER:1.0 USE_LUT USER_OUTPUT_COLORSPACE:0 USER_LMT_MODE:5 USE_NIGHT_EFFECT AO_MODE:1 AO_INTENSITY:1.8 AO_RADIUS:1.2 TEMPORAL_UPDATE_SPEED_AO:0.0026 AO_SAMPLES:9 ATMOSPHERIC_FOG_USER ATMOSPHERIC_FOG_DENSITY:0.0015 SHADOWS_ENABLED_USER LIGHTNING_FLASHES:0.8 WIND_STRENGTH_CONSTANT_USER:0.6 PIXELATED_SHADOWS_USER:0 shadowMapResolution:4096 shadowDistance:200.0 SHADOW_FILTERING:1
 
 
 program.shadow.enabled=SHADOWS_ENABLED_USER
