Fixed sunset shadows

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -93,8 +93,10 @@ uniform.float.eyeBrightnessSmoothFloat=smooth(inSky, 40, 40)
 # dot product of up vector and sun position
 variable.float.sunPosLen=sqrt(sunPosition.x * sunPosition.x + sunPosition.y * sunPosition.y + sunPosition.z * sunPosition.z)
 variable.float.upPosLen=sqrt(upPosition.x * upPosition.x + upPosition.y * upPosition.y + upPosition.z * upPosition.z)
-variable.float.unclampedSkyTime=(sunPosition.x * upPosition.x + sunPosition.y * upPosition.y + sunPosition.z * upPosition.z) / (sunPosLen * upPosLen)
-uniform.float.skyTime=clamp(unclampedSkyTime + 0.5, 0, 1)
+uniform.float.skyTime=(sunPosition.x * upPosition.x + sunPosition.y * upPosition.y + sunPosition.z * upPosition.z) / (sunPosLen * upPosLen)
+
+#                                                                                                ↓ Moon Time                                                               ↓ Sun Time
+# variable.float.unclampedSkyTime=if(between(worldTime, 12786, 23214), clamp(sin(0.0003012073493374682 * (worldTime - 12786)), 0, 1), clamp(-sin(0.0002315101439638757 * ((worldTime + 785) % 24000)), -1, 0))
 
 variable.float.cameraDivOffset=1000
 variable.float.cameraDiffSmoothX=smooth(clamp((cameraPosition.x - previousCameraPosition.x) / (frameTime * cameraDivOffset + 0.01) * cameraDivOffset, -10.0, 10.0), 5, 5)
@@ -104,7 +106,7 @@ uniform.vec3.cameraDiffSmooth=vec3(cameraDiffSmoothX, cameraDiffSmoothY, cameraD
 # uniform.vec3.cameraDiffSmooth=vec3(0.0, 0.0, 7.0)
 
 # settings for Hosek-Wilkie sky (actual constants calculated at bottom)
-variable.float.sunTheta=acos(clamp(unclampedSkyTime, 0.0, 1.0))
+variable.float.sunTheta=acos(clamp(skyTime, 0.0, 1.0))
 variable.float.elevation=pow(max(0.0, 1.0 - sunTheta / (pi / 2.0)), 1.0/3.0)
 # derive albedoes from skyColor converted to XYZ
 # variable.float.skyColorGammaCorrected_R=pow(skyColor.r, 2.2)
