Biomes without rain no longer have rain fog

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -89,6 +89,7 @@ uniform.float.directLightMult=3.4 / sqrt(maxRainFogSmooth + 1) - 2.4
 # uniform.float.directLightMult=if(hasCeiling, 0, 1)
 
 uniform.float.eyeBrightnessSmoothFloat=smooth(inSky, 40, 40)
+uniform.float.rainStrengthFiltered=smooth(if(biome_precipitation == PPT_RAIN, rainStrength, 0), 5, 5)
 
 # dot product of up vector and sun position
 variable.float.sunPosLen=sqrt(sunPosition.x * sunPosition.x + sunPosition.y * sunPosition.y + sunPosition.z * sunPosition.z)
