--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -125,7 +125,7 @@ screen = <profile> TEX_RES STREAMER_MODE LIGHTNING_FLASHES <empty> <empty> [SHAD
 
 screen.POST_PROCESSING =  [TONEMAPPING] [AA_BUFFET] <empty> <empty> LUMINANCE_CONTRAST EXPOSURE POST_SATURATION POST_TEMP <empty> <empty> DITHERING_MODE INVISIBILITY_DISTORTION
     screen.AA_BUFFET = TAA_MODE TEXTURE_FILTERING
-screen.SHADOWS = SHADOWS_ENABLED_USER <empty> <empty> <empty> shadowDistance entityShadowDistanceMul shadowMapResolution SHADOW_DISTORTION <empty> <empty> SHADOW_FILTERING SHADOW_FILTERING_RADIUS SHADOW_FILTERING_SAMPLES
+screen.SHADOWS = SHADOWS_ENABLED_USER <empty> <empty> <empty> shadowDistance entityShadowDistanceMul shadowMapResolution SHADOW_DISTORTION <empty> <empty> SHADOW_FILTERING SHADOW_FILTERING_RADIUS SHADOW_FILTERING_SAMPLES <empty> <empty> <empty> GRASS_CASTS_SHADOWS
 screen.LIGHTING = [LIGHT_STRENGTH] [SSAO_BETA] [RIMLIGHT] [FOG] <empty> <empty> VANILLA_LIGHTING CUTOUT_ALIGN_STRENGTH <empty> <empty> SUN_TEMP TORCH_TEMP
     screen.SSAO_BETA = AO_MODE AO_INTENSITY
     screen.SSAO_BETA.columns = 1
