--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -151,7 +151,7 @@ screen.WEATHER.columns = 3
     screen.WIND.columns = 3
     screen.RAIN = NOISY_RAIN RAIN_AMOUNT_USER <empty> <empty> RAIN_THICKNESS RAIN_TRANSPARENCY <empty> <empty> RAIN_FOG
     screen.RAIN.columns = 2
-    screen.FOG = FOG_ENABLED_USER RAIN_FOG <empty> <empty> ATMOSPHERIC_FOG_USER ATMOSPHERIC_FOG_DENSITY <empty> <empty> SECONDARY_FOG <empty> SECONDARY_FOG_START SECONDARY_FOG_END
+    screen.FOG = BORDER_FOG SECONDARY_FOG SECONDARY_FOG_START SECONDARY_FOG_END <empty> <empty> ATMOSPHERIC_FOG_USER ATMOSPHERIC_FOG_DENSITY <empty> <empty> FOG_ENABLED_USER RAIN_FOG
     screen.FOG.columns = 2
         screen.DIMENSION_WEATHER = OVERWORLD_FOGGY_WEATHER NETHER_FOGGY_WEATHER END_FOGGY_WEATHER
         screen.DIMENSION_WEATHER.columns = 1
