Updated grass to short_grass for 1.20.3

--- a/shaders/block.properties
+++ b/shaders/block.properties
@@ -29,7 +29,7 @@ block.8 = cave_vines:berries=true cave_vines_plant:berries=true twilightforest:t
 block.9 = magma_block sculk_sensor:sculk_sensor_phase=active calibrated_sculk_sensor:sculk_sensor_phase=active
 
 # wavy stuff (that is also a diagonal up-facing cutout)
-block.10 = blue_orchid fern grass warped_roots nether_sprouts lily_of_the_valley large_fern:half=lower lilac:half=lower rose_bush:half=lower peony:half=lower tall_grass:half=lower twilightforest:fiddlehead twilightforest:thorn_rose
+block.10 = blue_orchid fern grass short_grass warped_roots nether_sprouts lily_of_the_valley large_fern:half=lower lilac:half=lower rose_bush:half=lower peony:half=lower tall_grass:half=lower twilightforest:fiddlehead twilightforest:thorn_rose
 
 # two-tall wavy stuff (upper part only) (that is also a diagonal up-facing cutout)
 block.11 = large_fern:half=upper lilac:half=upper rose_bush:half=upper peony:half=upper tall_grass:half=upper
