Fixed DH water visibility

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -52,7 +52,9 @@ blend.gbuffers_armor_glint = ONE ONE ONE ONE
 
 # blend.deferred1 = ZERO ONE ONE ONE
 
-
+# prevent distant horizons solids from writing to colortex1
+blend.dh_terrain.colortex0 = ZERO ONE ONE ONE
+blend.dh_water.colortex1 = SRC_ALPHA ONE_MINUS_SRC_ALPHA ONE ONE_MINUS_SRC_ALPHA
 
 
 variable.float.isInvisible=if(is_invisible, 1, -0.1)
