Disabled DH shadows

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -57,6 +57,18 @@ blend.dh_terrain.colortex0 = ZERO ONE ONE ONE
 blend.dh_water.colortex1 = SRC_ALPHA ONE_MINUS_SRC_ALPHA ONE ONE_MINUS_SRC_ALPHA
 
 
+program.shadow.enabled=SHADOWS_ENABLED_USER
+program.dh_shadow.enabled=false
+
+# shadowcomp intentionally does not exist, it acts as shadowcomp_pre since that program isn't provided by optifine
+flip.shadowcomp1.colortex1=true
+
+flip.deferred.colortex0=false
+
+# flip.composite_pre.colortex4=
+
+
+
 variable.float.isInvisible=if(is_invisible, 1, -0.1)
 variable.float.isNotSpectator=smooth(if(isSpectator, 0, 1), 2, 0)
 uniform.float.invisibility=clamp(smooth(isInvisible * isNotSpectator, 2, 2), 0, 1)
@@ -173,15 +185,6 @@ profile.TWO = profile.ONE VANILLA_LIGHTING:2 CUTOUT_ALIGN_STRENGTH:0.8 SKY_COLOR
 profile.THREE = profile.TWO VANILLA_LIGHTING:2 CUTOUT_ALIGN_STRENGTH:0.8 SKY_COLOR_BLEND:0.7 STAR_WEIGHTS:1.75 SKY_SATURATION:1.0 SKY_BRIGHTNESS_USER:1.0 USE_LUT USER_OUTPUT_COLORSPACE:0 USER_LMT_MODE:5 USE_NIGHT_EFFECT AO_MODE:1 AO_INTENSITY:1.8 AO_RADIUS:1.2 TEMPORAL_UPDATE_SPEED_AO:0.0026 AO_SAMPLES:9 ATMOSPHERIC_FOG_USER ATMOSPHERIC_FOG_DENSITY:0.0015 SHADOWS_ENABLED_USER LIGHTNING_FLASHES:0.8 WIND_STRENGTH_CONSTANT_USER:0.6 PIXELATED_SHADOWS_USER:0 shadowMapResolution:4096 shadowDistance:200.0 SHADOW_FILTERING:1
 # profile.CONTENT_THREE = profile.THREE  STREAMER_MODE:0 !USE_LUT USER_LMT_MODE:3 AO_INTENSITY:2.0 ATMOSPHERIC_FOG_DENSITY:0.00075 LUMINANCE_CONTRAST:0.1 POST_SATURATION:1.1 DITHERING_MODE:0 LIGHTNING_FLASHES:0.1 INVISIBILITY_DISTORTION WAVING_ENABLED WIND_STRENGTH_CONSTANT_USER:0.3 RAIN_AMOUNT_USER:0.0 RAIN_THICKNESS:0.5 BRIGHT_NETHER
 
-
-program.shadow.enabled=SHADOWS_ENABLED_USER
-
-# shadowcomp intentionally does not exist, it acts as shadowcomp_pre since that program isn't provided by optifine
-flip.shadowcomp1.colortex1=true
-
-flip.deferred.colortex0=false
-
-# flip.composite_pre.colortex4=
 
 
 
