--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -54,6 +54,7 @@ blend.gbuffers_armor_glint = ONE ONE ONE ONE
 
 # prevent distant horizons solids from writing to colortex1
 blend.dh_terrain.colortex0 = ZERO ONE ONE ONE
+blend.dh_water.colortex0 = SRC_ALPHA ONE_MINUS_SRC_ALPHA ONE ONE_MINUS_SRC_ALPHA
 blend.dh_water.colortex1 = SRC_ALPHA ONE_MINUS_SRC_ALPHA ONE ONE_MINUS_SRC_ALPHA
 
 
