Added Freeze Wind option, improve wind settings

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -162,8 +162,8 @@ screen.MISC = [STREAMER_SETTINGS] [RIMLIGHT] [FADEOUT] [FOG] <empty> <empty> WAT
     screen.RESOURCEPACK.columns = 1
 screen.WEATHER = [WIND] [RAIN] [FOG] <empty> <empty> <empty> <empty> [DIMENSION_WEATHER]
 screen.WEATHER.columns = 3
-    screen.WIND = WAVING_ENABLED WIND_STRENGTH_CONSTANT_USER WAVE_STRENGTH_CONSTANT_USER <empty> <empty> <empty> WAVING_WATER_ENABLED WAVING_RAIN_ENABLED WAVING_FULL_BLOCKS_ENABLED LEAVE_WAVING_WAKE
-    screen.WIND.columns = 3
+    screen.WIND = WAVING_ENABLED WIND_STRENGTH_CONSTANT_USER WAVING_WATER_ENABLED WAVE_STRENGTH_CONSTANT_USER <empty> <empty> WAVING_RAIN_ENABLED WAVING_FULL_BLOCKS_ENABLED <empty> <empty> LEAVE_WAVING_WAKE STILL_WIND
+    screen.WIND.columns = 2
     screen.RAIN = NOISY_RAIN RAIN_AMOUNT_USER <empty> <empty> RAIN_THICKNESS RAIN_TRANSPARENCY <empty> <empty> RAIN_FOG
     screen.RAIN.columns = 2
     screen.FOG = BORDER_FOG SECONDARY_FOG SECONDARY_FOG_START SECONDARY_FOG_END <empty> <empty> ATMOSPHERIC_FOG_USER ATMOSPHERIC_FOG_DENSITY <empty> <empty> FOG_ENABLED_USER RAIN_FOG
