Added some more PBR equations

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -170,11 +170,12 @@ screen.WEATHER.columns = 3
     screen.FOG.columns = 2
         screen.DIMENSION_WEATHER = OVERWORLD_FOGGY_WEATHER NETHER_FOGGY_WEATHER END_FOGGY_WEATHER
         screen.DIMENSION_WEATHER.columns = 1
-screen.ADVANCED = [EXPERIMENTAL] [AUTO_ADDED] [DEBUG] <empty> <empty> <empty> SHADOW_TRANSITION_MIXING END_SKY_RESOLUTION HDR_TEX_LIGHT_BRIGHTNESS CLOUD_EXTENSION INVISIBILITY_DISTORT_STRENGTH
+screen.ADVANCED = [EXPERIMENTAL] [AUTO_ADDED] [DEBUG] [PBR] <empty> <empty> SHADOW_TRANSITION_MIXING END_SKY_RESOLUTION HDR_TEX_LIGHT_BRIGHTNESS CLOUD_EXTENSION INVISIBILITY_DISTORT_STRENGTH
     screen.DEBUG = DEBUG_VIEW SHADOW_DEBUG ISOLATE_RENDER_STAGE <empty> <empty> <empty> DISABLE_WATER WATER_FOG 
     screen.EXPERIMENTAL = [RESOURCEPACK] [SSAO] [NIGHT_EFFECT] [FORCED_PERSPECTIVE] <empty> <empty> SHADOW_SUPERSAMPLE SHADOW_AFFECTED_BY_LIGHTMAP VANILLA_SHADOWS PIXELATED_SHADOWS_USER <empty> <empty> END_WARPING FAST_GI PANORAMIC_WORLD TEXTURE_FILTER_EVERYTHING
         screen.FORCED_PERSPECTIVE = FORCED_PERSPECTIVE_POWER FORCED_PERSPECTIVE_BIAS FORCED_PERSPECTIVE_SHAPE
     screen.AUTO_ADDED = *
+    screen.PBR = FRESNEL_MODEL GEOMETRY_MODEL DISTRIBUTION_MODEL <empty> <empty> <empty> SHADING_MODE
 sliders = CONTRAST LUMINANCE_CONTRAST EXPOSURE POST_SATURATION EXPOSURE_SAMPLES EXPOSURE_UPDATE_SPEED MIN_EXPOSURE MAX_EXPOSURE EXPOSURE_BOUNDS CUTOUT_ALIGN_STRENGTH MIN_LIGHT_MULT_USER AMBIENT_LIGHT_MULT_USER SUN_LIGHT_MULT_USER SKY_LIGHT_MULT_USER SKY_LIGHT_MULT_OVERCAST_USER MOON_LIGHT_MULT_USER NIGHT_SKY_LIGHT_MULT_USER BLOCK_LIGHT_MULT_USER AO_RADIUS AO_INTENSITY TEMPORAL_UPDATE_SPEED_AO AO_SAMPLES BOUNCE_MULT LIT_MULTIPLIER DIM_LIGHT_DESAT_USER TEMPORAL_UPDATE_SPEED_USER PIXELATED_SHADOWS_USER shadowDistance entityShadowDistanceMul shadowMapResolution SHADOW_DISTORTION SHADOW_FILTERING_RADIUS SHADOW_FILTERING_SAMPLES SUN_TEMP TORCH_TEMP ATMOSPHERIC_FOG_DENSITY SECONDARY_FOG_START SECONDARY_FOG_END SKY_SATURATION SKY_COLOR_BLEND SKY_BRIGHTNESS_USER STAR_WEIGHTS POST_TEMP VANILLA_COLORS NIGHT_EFFECT_POINT NIGHT_EFFECT_SATURATION RIMLIGHT_MULT RIMLIGHT_PIXEL_RADIUS LIGHTNING_FLASHES FADE_OUT_RADIUS END_WARPING WIND_STRENGTH_CONSTANT_USER WAVE_STRENGTH_CONSTANT_USER RAIN_THICKNESS RAIN_AMOUNT_USER RAIN_TRANSPARENCY TEX_RES ISOLATE_RENDER_STAGE END_SKY_RESOLUTION CLOUD_EXTENSION INVISIBILITY_DISTORT_STRENGTH FORCED_PERSPECTIVE_POWER FORCED_PERSPECTIVE_BIAS FORCED_PERSPECTIVE_SHAPE
 
 # profile.CONTENT = STREAMER_MODE:0 !USE_LUT USER_LMT_MODE:3 AO_INTENSITY:2.0 ATMOSPHERIC_FOG_DENSITY:0.00075 CONTRAST:0.1 POST_SATURATION:1.1 DITHERING_MODE:0 LIGHTNING_FLASHES:0.1 INVISIBILITY_DISTORTION WAVING_ENABLED WIND_STRENGTH_CONSTANT_USER:0.3 RAIN_AMOUNT_USER:0.0 RAIN_THICKNESS:0.5 BRIGHT_NETHER
