Count frosted ice as ice

--- a/shaders/block.properties
+++ b/shaders/block.properties
@@ -62,7 +62,7 @@ block.19 = pink_petals bamboo:age=0:stage=1
 block.20 = lily_pad
 
 # ice (adds water fog)
-block.21 = ice
+block.21 = ice frosted_ice
 
 # overrides for certain blocks
 block.0 = redstone_wire:power=0 respawn_anchor:charges=0 trial_spawner:trial_spawner_state=cooldown trial_spawner:trial_spawner_state=inactive
