Improved AutoMat system

--- a/shaders/block.properties
+++ b/shaders/block.properties
@@ -8,7 +8,7 @@ block.2 = weeping_vines_plant weeping_vines hanging_roots cave_vines:berries=fal
 
 # light-emitting blocks referenced from https://minecraft.fandom.com/wiki/Light
 # last entries separated by two spaces don't usually emit light
-block.3 = beacon conduit:waterlogged=true end_gateway end_portal glowstone pearlescent_froglight verdant_froglight ochre_froglight lantern redstone_lamp:lit=true respawn_anchor sculk_catalyst sea_lantern sea_pickle:waterlogged=true shroomlight torch wall_torch trial_spawner end_rod candle:lit=true nether_portal crying_obsidian soul_lantern soul_torch soul_wall_torch ender_chest glow_lichen amethyst_cluster large_amethyst_bud medium_amethyst_bud small_amethyst_bud brewing_stand dragon_egg end_portal_frame:eye=true vault enchanting_table redstone_torch redstone_wall_torch copper_bulb:lit=true waxed_copper_bulb:lit=true exposed_copper_bulb:lit=true waxed_exposed_copper_bulb:lit=true weathered_copper_bulb:lit=true waxed_weathered_copper_bulb:lit=true oxidized_copper_bulb:lit=true waxed_oxidized_copper_bulb:lit=true twilightforest:firefly twilightforest:moonworm twilightforest:reappearing_block twilightforest:vanishing_block:active=true twilightforest:locked_vanishing_block:active=true twilightforest:antibuilder twilightforest:carminite_builder:state=builder_active twilightforest:carminite_reactor:active=true twilightforest:ghast_trap:active=true twilightforest:encased_fire_jet  sculk sculk_vein
+block.3 = beacon conduit:waterlogged=true end_gateway end_portal glowstone pearlescent_froglight verdant_froglight ochre_froglight lantern redstone_lamp:lit=true respawn_anchor sculk_catalyst sea_lantern sea_pickle:waterlogged=true shroomlight torch wall_torch trial_spawner end_rod nether_portal crying_obsidian soul_lantern soul_torch soul_wall_torch ender_chest glow_lichen amethyst_cluster large_amethyst_bud medium_amethyst_bud small_amethyst_bud brewing_stand dragon_egg end_portal_frame:eye=true vault enchanting_table redstone_torch redstone_wall_torch copper_bulb:lit=true waxed_copper_bulb:lit=true exposed_copper_bulb:lit=true waxed_exposed_copper_bulb:lit=true weathered_copper_bulb:lit=true waxed_weathered_copper_bulb:lit=true oxidized_copper_bulb:lit=true waxed_oxidized_copper_bulb:lit=true twilightforest:firefly twilightforest:moonworm twilightforest:reappearing_block twilightforest:vanishing_block:active=true twilightforest:locked_vanishing_block:active=true twilightforest:antibuilder twilightforest:carminite_builder:state=builder_active twilightforest:carminite_reactor:active=true twilightforest:ghast_trap:active=true twilightforest:encased_fire_jet candle:lit=true white_candle:lit=true light_gray_candle:lit=true gray_candle:lit=true black_candle:lit=true brown_candle:lit=true red_candle:lit=true orange_candle:lit=true yellow_candle:lit=true lime_candle:lit=true green_candle:lit=true cyan_candle:lit=true light_blue_candle:lit=true blue_candle:lit=true purple_candle:lit=true magenta_candle:lit=true pink_candle:lit=true  sculk sculk_vein
 
 # up-facing glowing
 block.4 = amethyst_cluster:facing=up large_amethyst_bud:facing=up medium_amethyst_bud:facing=up small_amethyst_bud:facing=up redstone_wire
@@ -63,6 +63,22 @@ block.20 = lily_pad
 
 # ice (adds water fog)
 block.21 = ice frosted_ice
+
+# matte stuff (correct for AutoMat specular estimation)
+block.22 = diorite mushroom_stem red_mushroom_block sponge dead_tube_coral_block dead_tube_coral_fan dead_brain_coral_block dead_brain_coral_fan dead_bubble_coral_block dead_bubble_coral_fan dead_fire_coral_block dead_fire_coral_fan dead_horn_coral_block dead_horn_coral_fan white_wool light_gray_wool gray_wool black_wool brown_wool red_wool orange_wool yellow_wool lime_wool green_wool cyan_wool light_blue_wool blue_wool purple_wool magenta_wool pink_wool white_bed light_gray_bed gray_bed black_bed brown_bed red_bed orange_bed yellow_bed lime_bed green_bed cyan_bed light_blue_bed blue_bed purple_bed magenta_bed pink_bed white_banner light_gray_banner gray_banner black_banner brown_banner red_banner orange_banner yellow_banner lime_banner green_banner cyan_banner light_blue_banner blue_banner purple_banner magenta_banner pink_banner
+
+# metallic blocks
+# waxed copper variants aren't in here on purpose
+block.23 = gold_block iron_block copper_block cut_copper cut_copper_stairs cut_copper_slab exposed_copper exposed_cut_copper exposed_cut_copper_stairs exposed_cut_copper_slab iron_bars iron_door iron_trapdoor heavy_weighted_pressure_plate light_weighted_pressure_plate
+
+# waxed copper variants (toggleable metallic)
+block.24 = waxed_copper_block waxed_cut_copper waxed_cut_copper_stairs waxed_cut_copper_slab waxed_exposed_copper waxed_exposed_cut_copper waxed_exposed_cut_copper_stairs waxed_exposed_cut_copper_slab
+
+# redstone block (toggleable metallic)
+block.25 = redstone_block
+
+# netherite block (toggleable metallic)
+block.26 = netherite_block
 
 # overrides for certain blocks
 block.0 = redstone_wire:power=0 respawn_anchor:charges=0 trial_spawner:trial_spawner_state=cooldown trial_spawner:trial_spawner_state=inactive
