Slightly redid settings

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -136,11 +136,12 @@ variable.float.elevation=pow(max(0.0, 1.0 - sunTheta / (pi / 2.0)), 1.0/3.0)
 # rain raises turbidity by 3, fog by 6
 variable.float.turbidity=maxRainFogSmooth * 3 + fogWeather * 5 + 0.4
 
-screen = <profile> TEX_RES STREAMER_MODE LIGHTNING_FLASHES <empty> <empty> [SHADOWS] [LIGHTING] [COLORS] [POST_PROCESSING] [MISC] [WEATHER] <empty> <empty> [ADVANCED]
+screen = <profile> BRIGHTER_NETHER STREAMER_MODE LIGHTNING_FLASHES <empty> <empty> [SHADOWS] [LIGHTING] [COLORS] [POST_PROCESSING] [MISC] [WEATHER] <empty> <empty> [ADVANCED]
 
-screen.POST_PROCESSING =  [TONEMAPPING] [AA_BUFFET] <empty> <empty> CONTRAST EXPOSURE SATURATION POST_TEMP <empty> <empty> DITHERING_MODE INVISIBILITY_DISTORTION
+screen.POST_PROCESSING = [TONEMAPPING] [AA_BUFFET] <empty> <empty> CONTRAST EXPOSURE SATURATION POST_TEMP <empty> <empty> DITHERING_MODE INVISIBILITY_DISTORTION
     screen.AA_BUFFET = TAA_MODE TEXTURE_FILTERING
-screen.SHADOWS = SHADOWS_ENABLED_USER <empty> <empty> <empty> shadowDistance entityShadowDistanceMul shadowMapResolution SHADOW_DISTORTION <empty> <empty> SHADOW_FILTERING SHADOW_FILTERING_RADIUS SHADOW_FILTERING_SAMPLES <empty> <empty> <empty> GRASS_CASTS_SHADOWS
+screen.SHADOWS = SHADOWS_ENABLED_USER [PIXELATED_LIGHTING] <empty> <empty> shadowDistance entityShadowDistanceMul shadowMapResolution SHADOW_DISTORTION <empty> <empty> SHADOW_FILTERING SHADOW_FILTERING_RADIUS SHADOW_FILTERING_SAMPLES <empty> <empty> <empty> GRASS_CASTS_SHADOWS
+    screen.PIXELATED_LIGHTING = TEX_RES
 screen.LIGHTING = [LIGHT_STRENGTH] [SSAO_BETA] [RIMLIGHT] [FOG] <empty> <empty> SHADING_MODE CUTOUT_ALIGN_STRENGTH <empty> <empty> SUN_TEMP TORCH_TEMP
     screen.SSAO_BETA = AO_MODE AO_INTENSITY
     screen.SSAO_BETA.columns = 1
@@ -151,7 +152,7 @@ screen.COLORS = [TONEMAPPING] [LIGHT_STRENGTH] BOSS_BATTLE_COLORS SHADING_MODE <
     screen.TONEMAPPING.columns = 1
         screen.NIGHT_EFFECT = USE_NIGHT_EFFECT NIGHT_EFFECT_POINT NIGHT_EFFECT_SATURATION
         screen.NIGHT_EFFECT.columns = 1
-screen.MISC = [STREAMER_SETTINGS] [RIMLIGHT] [FADEOUT] [FOG] <empty> <empty> WATER_STYLE LEAVE_WAVING_WAKE INVISIBILITY_DISTORTION BOSS_BATTLE_COLORS NOISY_LAVA SMOOTH_LAVA <empty> <empty> OUTLINE_THROUGH_BLOCKS OUTLINE_COLOR
+screen.MISC = [RIMLIGHT] [FADEOUT] [FOG] [STREAMER_SETTINGS] <empty> <empty> WATER_STYLE LEAVE_WAVING_WAKE INVISIBILITY_DISTORTION BOSS_BATTLE_COLORS NOISY_LAVA SMOOTH_LAVA <empty> <empty> OUTLINE_THROUGH_BLOCKS OUTLINE_COLOR
     screen.STREAMER_SETTINGS = STREAMER_MODE BRIGHT_NETHER LIGHTNING_FLASHES DITHERING_MODE <empty> <empty> RAIN_THICKNESS RAIN_TRANSPARENCY
     screen.STREAMER_SETTINGS.columns = 2
     screen.RIMLIGHT = RIMLIGHT_ENABLED RIMLIGHT_MULT <empty> <empty> RIMLIGHT_PIXEL_RADIUS RIMLIGHT_DIST RIMLIGHT_DYNAMIC_RADIUS RIMLIGHT_OUTLINE
