Fix typo in settings

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -136,7 +136,7 @@ variable.float.elevation=pow(max(0.0, 1.0 - sunTheta / (pi / 2.0)), 1.0/3.0)
 # rain raises turbidity by 3, fog by 6
 variable.float.turbidity=maxRainFogSmooth * 3 + fogWeather * 5 + 0.4
 
-screen = <profile> BRIGHTER_NETHER STREAMER_MODE LIGHTNING_FLASHES <empty> <empty> [SHADOWS] [LIGHTING] [COLORS] [POST_PROCESSING] [MISC] [WEATHER] <empty> <empty> [ADVANCED]
+screen = <profile> BRIGHT_NETHER STREAMER_MODE LIGHTNING_FLASHES <empty> <empty> [SHADOWS] [LIGHTING] [COLORS] [POST_PROCESSING] [MISC] [WEATHER] <empty> <empty> [ADVANCED]
 
 screen.POST_PROCESSING = [TONEMAPPING] [AA_BUFFET] <empty> <empty> CONTRAST EXPOSURE SATURATION POST_TEMP <empty> <empty> DITHERING_MODE INVISIBILITY_DISTORTION
     screen.AA_BUFFET = TAA_MODE TEXTURE_FILTERING
