Updated blocks with 1.21 additions

--- a/shaders/block.properties
+++ b/shaders/block.properties
@@ -67,18 +67,21 @@ block.21 = ice frosted_ice
 # matte stuff (correct for AutoMat specular estimation)
 block.22 = diorite grass_block mushroom_stem red_mushroom_block sponge dead_tube_coral_block dead_tube_coral_fan dead_brain_coral_block dead_brain_coral_fan dead_bubble_coral_block dead_bubble_coral_fan dead_fire_coral_block dead_fire_coral_fan dead_horn_coral_block dead_horn_coral_fan white_wool light_gray_wool gray_wool black_wool brown_wool red_wool orange_wool yellow_wool lime_wool green_wool cyan_wool light_blue_wool blue_wool purple_wool magenta_wool pink_wool white_bed light_gray_bed gray_bed black_bed brown_bed red_bed orange_bed yellow_bed lime_bed green_bed cyan_bed light_blue_bed blue_bed purple_bed magenta_bed pink_bed white_banner light_gray_banner gray_banner black_banner brown_banner red_banner orange_banner yellow_banner lime_banner green_banner cyan_banner light_blue_banner blue_banner purple_banner magenta_banner pink_banner
 
+# shiny stuff (correct for AutoMat specular estimation)
+block.23 = 
+
 # metallic blocks
 # waxed copper variants aren't in here on purpose
-block.23 = gold_block iron_block copper_block cut_copper cut_copper_stairs cut_copper_slab exposed_copper exposed_cut_copper exposed_cut_copper_stairs exposed_cut_copper_slab iron_bars iron_door iron_trapdoor heavy_weighted_pressure_plate light_weighted_pressure_plate
+block.24 = gold_block iron_block iron_bars iron_door iron_trapdoor heavy_weighted_pressure_plate light_weighted_pressure_plate heavy_core copper_block cut_copper cut_copper_stairs cut_copper_slab exposed_copper exposed_cut_copper exposed_cut_copper_stairs exposed_cut_copper_slab copper_grate exposed_copper_grate copper_door exposed_copper_door copper_trapdoor exposed_copper_trapdoor copper_bulb:lit=false exposed_copper_bulb:lit=false
 
 # waxed copper variants (toggleable metallic)
-block.24 = waxed_copper_block waxed_cut_copper waxed_cut_copper_stairs waxed_cut_copper_slab waxed_exposed_copper waxed_exposed_cut_copper waxed_exposed_cut_copper_stairs waxed_exposed_cut_copper_slab
+block.25 = waxed_copper_block waxed_cut_copper waxed_cut_copper_stairs waxed_cut_copper_slab waxed_exposed_copper waxed_exposed_cut_copper waxed_exposed_cut_copper_stairs waxed_exposed_cut_copper_slab waxed_copper_grate waxed_exposed_copper_grate waxed_copper_door waxed_exposed_copper_door waxed_copper_trapdoor waxed_exposed_copper_trapdoor waxed_copper_bulb:lit=false waxed_exposed_copper_bulb:lit=false
 
 # redstone block (toggleable metallic)
-block.25 = redstone_block
+block.26 = redstone_block
 
 # netherite block (toggleable metallic)
-block.26 = netherite_block
+block.27 = netherite_block
 
 # overrides for certain blocks
 block.0 = redstone_wire:power=0 respawn_anchor:charges=0 trial_spawner:trial_spawner_state=cooldown trial_spawner:trial_spawner_state=inactive
