--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -106,8 +106,11 @@ uniform.float.directLightMult=3.4 / sqrt(maxRainFogSmooth + 1) - 2.4
 uniform.float.eyeBrightnessSmoothFloat=smooth(inSky, 40, 40)
 uniform.float.rainStrengthFiltered=smooth(if(biome_precipitation == 1, rainStrength, 0), 5, 5)
 
-uniform.float.wetnessCustom=smooth(rainStrengthFiltered, 100, 100)
-uniform.float.wetnessFiltered=smooth(if(biome_precipitation == 1, wetnessCustom, 0), 5, 5)
+variable.float.wetnessCustomRaw=smooth(rainStrength, 400, 200) * 1.2
+variable.float.wetnessCustom=sin(pi * (max(min(wetnessCustomRaw, 1.0), 0.0) - 0.5)) * 0.5 + 0.5
+uniform.float.wetnessFiltered=smooth(if(biome_precipitation == 1, wetnessCustom, 0), 20, 1)
+
+uniform.float.windiness=smooth(rainStrength, 40, 70)
 
 # dot product of up vector and sun position
 variable.float.sunPosLen=sqrt(sunPosition.x * sunPosition.x + sunPosition.y * sunPosition.y + sunPosition.z * sunPosition.z)
